[package]
name = "rdmenu"
version = "0.0.1"
authors = ["Wojciech Kozlowski <wk@wojciechkozlowski.eu>"]
license = "AGPL-3.0"
keywords = ["wm"]
repository = "https://github.com/Wojtek242/rwm"
homepage = "https://github.com/Wojtek242/rwm"
documentation = "https://docs.rs/rwm"
description = """
Library for the rdmenu launcher.
"""

[dependencies]
